--- a/go_study/.vscode/launch.json
+++ b/go_study/.vscode/launch.json
@@ -5,12 +5,11 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Launch Package",
+            "name": "main.go",
             "type": "go",
             "request": "launch",
             "mode": "auto",
-            "program": "${fileDirname}"
+            "program": "${fileDirname}/main.go"
         }
-
     ]
 }
